[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "woo-ext"
dynamic = ["version"]
description = "Extended functions for woocommerce client"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "woo",
  "woocommerce",
  "client",
  "extension",
  "REST",
  "API",
]
authors = [
  { name = "m-birke", email = "wesci@web.de" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "pydantic>=2.12.5",
  "tenacity>=9.1,<10",
  "woocommerce>=3.0.0,<4",
]

[project.urls]
Changelog = "https://github.com/m-birke/woo-ext/blob/main/CHANGELOG.md"
Documentation = "https://github.com/m-birke/woo-ext#readme"
Homepage = "https://github.com/m-birke/woo-ext"
Issues = "https://github.com/m-birke/woo-ext/issues"
Source = "https://github.com/m-birke/woo-ext"

[tool.hatch]
build.hooks.vcs.version-file = "src/woo_ext/_version.py"
build.targets.wheel.packages = ["src/woo_ext/"]

[tool.hatch.version]
source = "vcs"
raw-options = {version_scheme = "only-version", local_scheme = "no-local-version"}

[tool.hatch.envs.default]
path = "./.hatch/default"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.types]
path = "./.hatch/types"
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/woo_ext tests}"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["woo_ext"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.mypy]
follow_untyped_imports = true
#ignore_missing_imports = true

[tool.coverage.run]
source_pkgs = ["woo_ext", "tests"]
branch = true
parallel = true
omit = [
  "src/woo_ext/__about__.py",
]

[tool.coverage.paths]
woo_ext = ["src/woo_ext", "*/woo-ext/src/woo_ext"]
tests = ["tests", "*/woo-ext/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
